Add genres attribute task

--- a/index_more_queries.ipynb
+++ b/index_more_queries.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:08:18.455343Z",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:51:08.981398Z",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:02.468691Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:55.977289Z",
@@ -132,12 +132,13 @@
        " ('tracks',)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# This query should job your memory about how SQL syntax\n",
     "cursor.execute('''SELECT name FROM sqlite_master\n",
     "                                        WHERE\n",
     "                                        type = 'table'\n",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:00:59.730384Z",
@@ -180,7 +181,7 @@
        " 'tracks']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +210,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ok ok*, in the cell below, let's create a class called ```Chinook```.\n",
+    "In the cell below describe the difference between an attribute and a method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------Use this markdown cell to describe the difference between attributes and methods---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the cell below, let's create a class called ```Chinook```.\n",
     "\n",
     "The class should have an ```__init__()``` method.\n",
     "\n",
@@ -238,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:44:32.581152Z",
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +284,7 @@
     "                                        WHERE\n",
     "                                        type = 'table'\n",
     "                                        AND\n",
-    "                                        name NOT LIKE 'sqlite_%';''')\n",
+    "                                        name NOT LIKE 'sqlite_%';''').fetchall()\n",
     "        self.tables = [x[0] for x in tables]\n"
    ]
   },
@@ -282,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:32:23.022613Z",
@@ -327,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:27:49.449398Z",
@@ -403,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:29:00.562804Z",
@@ -432,20 +447,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below describe the difference between an attribute and a method."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-------Use this markdown cell to describe the difference between attributes and methods---------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Task 1: Unique Genre Attribute\n",
     "\n",
     "Add an attribute to the __init__ function called `genre` which holds information about unique genres in the genres table. \n",
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,14 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +716,7 @@
        "24               World"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,6 +731,89 @@
     "chinook = Chinook(path)\n",
     "\n",
     "chinook.query(genre_query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3: Genres attribute\n",
+    "\n",
+    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, but don't use the query method.  execute a sql statement in the init function. Then, use a list comprehension to create an attribute that is a list of all unique genres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#__SOLUTION__\n",
+    "class Chinook():\n",
+    "    def __init__(self, database_path):\n",
+    "        self.conn = sqlite3.connect(database_path)\n",
+    "        self.cursor = self.conn.cursor()\n",
+    "\n",
+    "        tables = self.cursor.execute('''SELECT name FROM sqlite_master\n",
+    "                                        WHERE\n",
+    "                                        type = 'table'\n",
+    "                                        AND\n",
+    "                                        name NOT LIKE 'sqlite_%';''')\n",
+    "        self.tables = [x[0] for x in tables]\n",
+    "        \n",
+    "        ### New\n",
+    "        genres = self.cursor.execute('''SELECT DISTINCT(name) as genre_name\n",
+    "                                        FROM genres\n",
+    "                                        ORDER BY genre_name ASC''').fetchall()\n",
+    "        \n",
+    "        self.genres = [genre[0] for genre in genres]\n",
+    "     \n",
+    "    def query(self, query_string):\n",
+    "        \n",
+    "        return pd.read_sql(query_string, self.conn)\n",
+    "    \n",
+    "# --> Your code here <-------------\n",
+    "    def search_employee(self, firstname, lastname):\n",
+    "        \n",
+    "        result = pd.read_sql(f'''SELECT * FROM employees\n",
+    "                    WHERE FirstName = '{firstname}'\n",
+    "                    AND LastName = \"{lastname}\"\n",
+    "                    ''', con = self.conn\n",
+    "                    )\n",
+    "\n",
+    "        if len(result) == 0:\n",
+    "            return \"Employee was not found.\"\n",
+    "        else:\n",
+    "            return result \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nice job\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinook = Chinook(path)\n",
+    "\n",
+    "assert len(chinook.genres) == 25\n",
+    "print(\"nice job\")"
    ]
   },
   {
