Add forth task, and deleted old methods

--- a/index_more_queries.ipynb
+++ b/index_more_queries.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
     "                                        name NOT LIKE 'sqlite_%';''')\n",
     "        self.tables = [x[0] for x in tables]\n",
     "    \n",
-    "# --> Your code here <-------------\n",
+    "    # Solution\n",
     "    def search_employee(self, firstname, lastname):\n",
     "        \n",
     "        result = pd.read_sql(f'''SELECT * FROM employees\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:27:49.449398Z",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:29:00.562804Z",
@@ -462,18 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Chinook():\n",
-    "    def __init__(self, database_path):\n",
+    "    def __init__():\n",
     "       '''fill in with code from above'''        \n",
     "    def query():\n",
     "        # new code here\n",
     "        pass\n",
     "    \n",
-    "    def search_employee(self, firstname, lastname):\n",
+    "    def search_employee():\n",
     "       '''fill in with code from above'''\n",
     "        \n",
     "\n"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "24               World"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
     "                                        name NOT LIKE 'sqlite_%';''')\n",
     "        self.tables = [x[0] for x in tables]\n",
     "        \n",
-    "        ### New\n",
+    "        # Solution for task 3\n",
     "        genres = self.cursor.execute('''SELECT DISTINCT(name) as genre_name\n",
     "                                        FROM genres\n",
     "                                        ORDER BY genre_name ASC''').fetchall()\n",
@@ -781,7 +781,6 @@
     "        \n",
     "        return pd.read_sql(query_string, self.conn)\n",
     "    \n",
-    "# --> Your code here <-------------\n",
     "    def search_employee(self, firstname, lastname):\n",
     "        \n",
     "        result = pd.read_sql(f'''SELECT * FROM employees\n",
@@ -798,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -820,21 +819,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>There are a lot of really helpful ways OOP can be used to iteract with data.</u>\n",
+    "# Task 4: Albums by Genre \n",
     "\n",
-    "**If you still have time,** I've added some extra functionality to the ```Chinook``` class!\n",
+    "Add a new method called albums_by_genre which takes a genre string as an argument (I'm not mentioning the other argument that you must always have). The method should use the `query` method defined above.  The method should return a dataframe of all album titles of the genre associate with the string given as an argument.\n",
     "\n",
-    "Take a look at it, and in a markdown cell, describe what the additions are doing.\n",
-    "\n",
-    ">Note: You may need to google ```setattr```!"
+    "** SQL Hint**: You must `join` the albums, tracks, and genres tables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#__SOLUTION__\n",
     "class Chinook():\n",
     "    def __init__(self, database_path):\n",
     "        self.conn = sqlite3.connect(database_path)\n",
@@ -847,16 +854,9 @@
     "                                        name NOT LIKE 'sqlite_%';''')\n",
     "        self.tables = [x[0] for x in tables]\n",
     "        \n",
-    "        # =========== NEW ADDITION HERE ==========\n",
     "        genres = self.cursor.execute('''SELECT DISTINCT(Name) from genres;''').fetchall()\n",
     "        self.genres = [x[0] for x in genres]\n",
-    "        \n",
-    "        # =========== NEW ADDITION HERE ==========\n",
-    "        for table in self.tables:\n",
-    "            entire_table = pd.read_sql('''SELECT * FROM {}'''.format(table), self.conn)\n",
-    "            setattr(self, table, entire_table)\n",
     "    \n",
-    "    # =========== NEW ADDITION HERE ========== \n",
     "    def query(self, query_string):\n",
     "        return pd.read_sql(query_string, self.conn)\n",
     "\n",
@@ -871,7 +871,7 @@
     "        else:\n",
     "            return result\n",
     "        \n",
-    "    # =========== NEW ADDITION HERE ==========\n",
+    "    # Solution for task 4\n",
     "    def albums_by_genre(self, genre):\n",
     "        return self.query('''SELECT DISTINCT(Title) FROM albums\n",
     "                            INNER JOIN tracks USING(AlbumId)\n",
@@ -882,18 +882,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the cell below, copy your class from above from above, then add to it as instructed below:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice work!\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinook_genre = Chinook(path)\n",
+    "assert chinook_genre.albums_by_genre('Jazz').shape[0] == 13\n",
+    "print(\"Nice work!\")"
+   ]
   }
  ],
  "metadata": {
