Add some description of Chinook and sqlite

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,8 +14,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out the entity relationship diagram below of the Chinook Database.  \n",
+    "Check out the entity relationship diagram below of the Chinook Database. The Chinook Database is a sample database created with data from the apple store [info](https://docs.yugabyte.com/latest/sample-data/chinook/) \n",
     "![Chinook Schema](images/schema.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "We will use the sqlite3 package, which will connect to the database file he"
    ]
   },
   {
@@ -918,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
