Added 5 minute pair programming instruvtion

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,17 +19,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "We will use the sqlite3 package, which will connect to the database file he"
+    "We will use the sqlite3 package, which will connect to the database file stored in the data folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:08:18.455343Z",
@@ -53,8 +51,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to build a ```Chinook``` class that will allow us to easily access information in our database without having to write sql queries every time. We can do this with *attributes* and *methods*.\n",
-    "\n",
+    "We want to build a ```Chinook``` class that will allow us to easily access information in our database without having to write sql queries every time. We can do this with *attributes* and *methods*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the cell below describe the difference between an attribute and a method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------Use this markdown cell to describe the difference between attributes and methods---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Our class should have an attribute called ```tables``` that returns a list of tables within the database.\n",
     "\n",
     "<u><b>Let's review the code for collecting this information.</b></u>\n",
@@ -71,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:51:08.981398Z",
@@ -96,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:02.468691Z",
@@ -112,12 +129,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3) Execute a sql query"
+    "### 3) Execute a sql query\n",
+    "sqlite_master is a table in all sqlite databases which describes the database schema."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:55.977289Z",
@@ -141,7 +159,7 @@
        " ('tracks',)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:00:59.730384Z",
@@ -190,7 +208,7 @@
        " 'tracks']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,20 +237,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below describe the difference between an attribute and a method."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-------Use this markdown cell to describe the difference between attributes and methods---------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "In the cell below, let's create a class called ```Chinook```.\n",
     "\n",
     "The class should have an ```__init__()``` method.\n",
@@ -241,9 +245,10 @@
     "\n",
     ">**Example:** \n",
     "\n",
-    ">```class NameOfClass():\n",
+    "```class NameOfClass():\n",
     "    def name_of_method(self, other_arguments_if_needed):\n",
-    "        code here```\n",
+    "        code here\n",
+    "```\n",
     "        \n",
     "\n",
     "The ```__init__()``` method should have two arguments:\n",
@@ -258,6 +263,13 @@
     "The code to create the  ```tables``` attribute will be almost identical to the code up above. \n",
     "\n",
     "The main difference is that the final tables variable should look like this: ```self.tables```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Take 5 minutes with a partner to accomplish the task above."
    ]
   },
   {
