Add task 1 and task 2 headers

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,6 +237,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Task 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the cell below, let's create a class called ```Chinook```.\n",
     "\n",
     "The class should have an ```__init__()``` method.\n",
@@ -269,12 +276,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Take 5 minutes with a partner to accomplish the task above."
+    "#  Take 5 minutes with a partner to accomplish the task above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:44:32.581152Z",
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:32:23.022613Z",
@@ -349,6 +356,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Task 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Let's add a *method* to our class called ```search_employees```.**\n",
     "\n",
     "This method should use ```pd.read_sql``` to return a dataframe with a single row for the employee you search for.\n",
@@ -358,12 +372,21 @@
     "2. The firstname of an employee.\n",
     "3. The lastname of an employee.\n",
     "\n",
-    "If the employee is not found, the method should return the string ```'Employee was not found.'``` "
+    "If the employee is not found, the method should return the string ```'Employee was not found.'``` '\n",
+    "\n",
+    "**Hint**: Use f-strings in combination with a sql statement.  Interpolate the arguments given to the method into f-string via the curly braces { }. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Take 5 minutes with your partner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:27:49.449398Z",
@@ -439,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:29:00.562804Z",
