Add task 5 instructions

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:27:49.449398Z",
@@ -462,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:29:00.562804Z",
@@ -491,9 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: Unique Genre Attribute\n",
-    "\n",
-    "Add an attribute to the __init__ function called `genre` which holds information about unique genres in the genres table. \n",
+    "# Task 3: Query Method\n",
     "\n"
    ]
   },
@@ -506,26 +513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Chinook():\n",
-    "    def __init__():\n",
-    "       '''fill in with code from above'''        \n",
-    "    def query():\n",
-    "        # new code here\n",
-    "        pass\n",
-    "    \n",
-    "    def search_employee():\n",
-    "       '''fill in with code from above'''\n",
-    "        \n",
-    "\n"
+    "# your code here\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +538,7 @@
     "                                        AND\n",
     "                                        name NOT LIKE 'sqlite_%';''')\n",
     "        self.tables = [x[0] for x in tables]\n",
-    "    \n",
+    "    ##### Solution to task 3\n",
     "    def query(self, query_string):\n",
     "        \n",
     "        return pd.read_sql(query_string, self.conn)\n",
@@ -565,11 +562,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2: \n",
+    "# Task 4: \n",
     "\n",
-    "Write a query that selects all unique genres from the genre table ordered alphabetically. \n",
+    "Write a query that selects all unique genres from the genre table ordered alphabetically. Because the `query` method uses pd.read_sql, the result should be a dataframe\n",
     "\n",
     "SQL Hint: DISTINCT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Take 5 minutes with your partner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_query = '''Query here'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#__SOLUTION__\n",
+    "\n",
+    "genre_query = '''SELECT DISTINCT(name) as genre_name\n",
+    "                FROM genres\n",
+    "                ORDER BY genre_name ASC'''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell instantiate an instance of the class, and tests out the query using the `query` method.\n"
    ]
   },
   {
@@ -578,14 +611,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genre_query = '''Query here'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instantiate an instance of the class, and test out the query using the `query` method.\n"
+    "chinook = Chinook(path)\n",
+    "\n",
+    "genre_result = chinook.query(genre_query)"
    ]
   },
   {
@@ -594,201 +622,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>genre_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alternative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alternative &amp; Punk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Blues</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bossa Nova</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Classical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Easy Listening</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Electronica/Dance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Heavy Metal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Hip Hop/Rap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Jazz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Latin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Metal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Opera</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Pop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>R&amp;B/Soul</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Reggae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Rock And Roll</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Sci Fi &amp; Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Science Fiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Soundtrack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>TV Shows</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>World</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            genre_name\n",
-       "0          Alternative\n",
-       "1   Alternative & Punk\n",
-       "2                Blues\n",
-       "3           Bossa Nova\n",
-       "4            Classical\n",
-       "5               Comedy\n",
-       "6                Drama\n",
-       "7       Easy Listening\n",
-       "8    Electronica/Dance\n",
-       "9          Heavy Metal\n",
-       "10         Hip Hop/Rap\n",
-       "11                Jazz\n",
-       "12               Latin\n",
-       "13               Metal\n",
-       "14               Opera\n",
-       "15                 Pop\n",
-       "16            R&B/Soul\n",
-       "17              Reggae\n",
-       "18                Rock\n",
-       "19       Rock And Roll\n",
-       "20    Sci Fi & Fantasy\n",
-       "21     Science Fiction\n",
-       "22          Soundtrack\n",
-       "23            TV Shows\n",
-       "24               World"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#__SOLUTION__\n",
-    "\n",
-    "genre_query = '''SELECT DISTINCT(name) as genre_name\n",
-    "                FROM genres\n",
-    "                ORDER BY genre_name ASC'''\n",
-    "\n",
-    "chinook = Chinook(path)\n",
-    "\n",
-    "chinook.query(genre_query)"
+    "assert genre_result.shape[0] == 25"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3: Genres attribute\n",
+    "# Task 5: Genres attribute\n",
     "\n",
-    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, but don't use the query method.  execute a sql statement in the init function. Then, use a list comprehension to create an attribute that is a list of all unique genres."
+    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, but **don't** use the query method.  Execute a sql statement in the init function using self.cursor.execute. Then, use a list comprehension to create an attribute that is a **list** of all unique genres."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Take 5 minutes with your partner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +671,7 @@
     "                                        name NOT LIKE 'sqlite_%';''')\n",
     "        self.tables = [x[0] for x in tables]\n",
     "        \n",
-    "        # Solution for task 3\n",
+    "        # Solution for task 5\n",
     "        genres = self.cursor.execute('''SELECT DISTINCT(name) as genre_name\n",
     "                                        FROM genres\n",
     "                                        ORDER BY genre_name ASC''').fetchall()\n",
@@ -841,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +711,7 @@
    ],
    "source": [
     "chinook = Chinook(path)\n",
-    "\n",
+    "assert type(chinook.genres==list)\n",
     "assert len(chinook.genres) == 25\n",
     "print(\"nice job\")"
    ]
@@ -863,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4: Albums by Genre \n",
+    "# Task 6: Albums by Genre \n",
     "\n",
     "Add a new method called albums_by_genre which takes a genre string as an argument (I'm not mentioning the other argument that you must always have). The method should use the `query` method defined above.  The method should return a dataframe of all album titles of the genre associate with the string given as an argument.\n",
     "\n",
