--- a/index.ipynb
+++ b/index.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:08:18.455343Z",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:51:08.981398Z",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:02.468691Z",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T20:55:55.977289Z",
@@ -159,7 +159,7 @@
        " ('tracks',)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:00:59.730384Z",
@@ -208,7 +208,7 @@
        " 'tracks']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,12 +276,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Take 5 minutes with a partner to accomplish the task above."
+    "##  Take 5 minutes with a partner."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:44:32.581152Z",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:32:23.022613Z",
@@ -381,12 +381,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Take 5 minutes with your partner"
+    "## Take 5 minutes with your partner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:27:49.449398Z",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-22T21:29:00.562804Z",
@@ -508,12 +508,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a method called `query` that takes `self` and `query_string` as arguments.   It then returns the result of pd.read_sql with the arguments associated with the query and the connection to the database."
+    "Add a method called `query` that takes `self` and `query_string` as arguments.   The method should then use pd.read_sql and feed it arguments of 1) query_string 2) the connection to the database defined in the __init__ (think self). The method should return a dataframe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Take 5 minutes with your partner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4: \n",
+    "# Task 4: Use the query method to find unique genres in the dataframe\n",
     "\n",
     "Write a query that selects all unique genres from the genre table ordered alphabetically. Because the `query` method uses pd.read_sql, the result should be a dataframe\n",
     "\n",
@@ -578,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,17 +642,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Take 5 minutes with your partner"
+    "## Take 5 minutes with your partner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
