Allow for query method in the index"

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,14 +7,14 @@
     "# OOP and SQL\n",
     "\n",
     "\n",
-    "This morning we will be using Object Oriented Programming to interface with the Chinook SQL Database.  It will be a two birds one stone situation. Bird one: Understanding of OOP; Bird two: SQL Practice."
+    "This morning we will be using Object Oriented Programming to interface with the Chinook SQL Database. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out the entity relationship diagram below of the Chinook Database. The Chinook Database is a sample database created with data from the apple store [info](https://docs.yugabyte.com/latest/sample-data/chinook/) \n",
+    "Check out the entity relationship diagram below of the Chinook Database. The Chinook Database is a sample database created with purchase data from the Apple Store [info](https://docs.yugabyte.com/latest/sample-data/chinook/) \n",
     "![Chinook Schema](images/schema.png)"
    ]
   },
@@ -299,7 +299,8 @@
     "\n",
     "If the employee is not found, the method should return the string ```'Employee was not found.'``` '\n",
     "\n",
-    "**Hint**: Use f-strings in combination with a sql statement.  Interpolate the arguments given to the method into f-string via the curly braces { }. "
+    "**Hint**: Use f-strings in combination with a sql statement.  Interpolate the arguments given to the method into f-string via the curly braces { }. Make sure to surround those curly's in quotes\n",
+    "**HINT**: Make sure that 'Employee was not found.' string has a period."
    ]
   },
   {
@@ -398,7 +399,7 @@
    "source": [
     "# Task 4: Use the query method to find unique genres in the dataframe\n",
     "\n",
-    "Write a query that selects all unique genres from the genre table ordered alphabetically. Because the `query` method uses pd.read_sql, the result should be a dataframe\n",
+    "Write a query that selects all unique genre `name`'s from the `genre` table ordered alphabetically. Because the `query` method uses pd.read_sql, the result should be a dataframe\n",
     "\n",
     "SQL Hint: DISTINCT"
    ]
@@ -452,7 +453,7 @@
    "source": [
     "# Task 5: Genres attribute\n",
     "\n",
-    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, but **don't** use the query method.  Execute a sql statement in the init function using self.cursor.execute. Then, use a list comprehension to create an attribute that is a **list** of all unique genres."
+    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, you can use the `query` method defined above, or execute a sql statement in the init function using self.cursor.execute. Then, use a list comprehension to create an attribute that is a **list** of all unique genres."
    ]
   },
   {
