Fix task 5 instructions

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
    "source": [
     "# Task 5: Genres attribute\n",
     "\n",
-    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above, you can use the `query` method defined above, or execute a sql statement in the init function using self.cursor.execute. Then, use a list comprehension to create an attribute that is a **list** of all unique genres."
+    "Within the __init__ method, create a `genres` attribute which is a list of all unique genres in the database. Use the same query as above and the `query` method defined above directly within the __init__, or execute a sql statement in the init function using self.cursor.execute.  Use a list comprehension to create an attribute that is a **list** of all unique genres."
    ]
   },
   {
